fix: Update snake workflow to generate dark theme snake
- Add dark theme color configuration to snake generation
- Set background color to GitHub dark theme (#0d1117)
- Set grid color to GitHub dark grid (#161b22)
- Set text color to GitHub dark text (#f0f6fc)
- Change output filename to github-contribution-grid-snake-dark.svg
- Ensure snake matches profile dark theme

--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,12 +15,15 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Generate Snake Animation
+      - name: Generate Snake Animation (Dark Theme)
         uses: Platane/snk@v3
         with:
           github_user_name: gpl-gowthamchand
+          svg_fill_color: "#0d1117"
+          svg_rect_fill_color: "#161b22"
+          svg_text_color: "#f0f6fc"
           outputs: |
-            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg
 
       - name: Push to Output Branch
         uses: crazy-max/ghaction-github-pages@v3
